<resources>
    <string name="app_name">Your Playgroup</string>
    <string name="title_activity_layout">LayoutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="password_field">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcomeText">Welcome !</string>
    <string name="empty">Field empty</string>
    <string name="friends">My Friends</string>
    <string name="aboutTheApp">About the app</string>
    <string name="logout">Logout</string>
    <string name="parent_message">Ask your parent to do this !</string>
    <string name="last_name">Name</string>
    <string name="first_name">First name</string>
    <string name="wrong">Wrong credentials ! Please try again !</string>
    <string name="play_button">Play</string>
    <string name="enter_tokken">Enter the code</string>
    <string name="create_room">Create a room</string>
    <string name="join_room">Join a room</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
