<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/join_create_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosepale"
    tools:context=".ui.drawinggame.JoinCreateRoomFragment">


    <Button
        android:id="@+id/create"
        android:layout_width="136dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/custom_login"
        android:fontFamily="@font/baloo"
        android:onClick="createAccount"
        android:text="@string/create_room"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join" />

    <Button
        android:id="@+id/join"
        android:layout_width="136dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_login"
        android:fontFamily="@font/baloo"
        android:onClick="createAccount"
        android:text="@string/join_room"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_tokken" />

    <EditText
        android:id="@+id/edit_tokken"
        android:layout_width="297dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_tokken"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>